--- a/AvatarCatan2.2/app/src/main/res/layout/grid_block.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/grid_block.xml
@@ -7,9 +7,9 @@
 
     <ImageView
         android:layout_width="100dp"
-        android:layout_height="50dp"
         android:id="@+id/imageView3"
-        android:src="@drawable/avatar" />
+        android:src="@drawable/avatar"
+        android:layout_height="100dp" />
 
     <TextView
         android:layout_width="wrap_content"
